force-app/main/default/objects/Opportunity_Gateway_Log__c/Opportunity_Gateway_Log__c.object-meta.xml
<CustomObject>
    <label>Opportunity Gateway Log</label>
    <nameField>
        <displayFormat>OPGL-{000000000}</displayFormat>
        <label>PaymentGatewayLogNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Gateway Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>