force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/Gateway_Message__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Message__c</fullName>
    <label>Gateway Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>