force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/GatewayAuthCode__c.field-meta.xml
<CustomField>
    <fullName>GatewayAuthCode__c</fullName>
    <label>GatewayAuthCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>