force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/GatewayDate__c.field-meta.xml
<CustomField>
    <fullName>GatewayDate__c</fullName>
    <label>GatewayDate</label>
    <type>DateTime</type>
</CustomField>