force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/GatewayReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>GatewayReferenceNumber__c</fullName>
    <label>GatewayReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>