force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/Opportunity_Payment_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Payment_Summary_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Payment Summary</label>
    <referenceTo>Opportunity_Payment_Summary__c</referenceTo>
    <relationshipLabel>Opportunity Gateway Logs</relationshipLabel>
    <relationshipName>Opportunity_Gateway_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>