force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/Opportunity_summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_summary_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity summary Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Gateway Logs</relationshipLabel>
    <relationshipName>Opportunity_Gateway_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>