force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/Payment_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Payment_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Authorization</label>
    <referenceTo>PaymentAuthorization</referenceTo>
    <relationshipLabel>Opportunity Gateway Logs (Payment Authorization)</relationshipLabel>
    <relationshipName>Opportunity_Gateway_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>