force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/PaymentGatewayLogNumber1__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayLogNumber1__c</fullName>
    <label>PaymentGatewayLogNumber1</label>
    <type>AutoNumber</type>
</CustomField>