force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/ReferencedEntity__c.field-meta.xml
<CustomField>
    <fullName>ReferencedEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReferencedEntity</label>
    <referenceTo>Payment</referenceTo>
    <relationshipLabel>Opportunity Gateway Logs</relationshipLabel>
    <relationshipName>Opportunity_Gateway_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>