force-app/main/default/objects/Opportunity_Gateway_Log__c/fields/SfRefNumber__c.field-meta.xml
<CustomField>
    <fullName>SfRefNumber__c</fullName>
    <label>SalesforceReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>